kube-ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: ingress-nginx
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      nodePort: 30001
      protocol: TCP
      name: https

---

kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx-health
  namespace: ingress-nginx
  labels:
    app: ingress-nginx-health
spec:
  type: NodePort
  selector:
    - app: ingress-nginx-health
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
      protocol: TCP
      name: http
