kube-ingress-services.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ms-go-hello
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /go
        backend:
          serviceName: ms-go-hello
          servicePort: 3737
      - path: /node
        backend:
          serviceName: ms-node-hello
          servicePort: 3000
